# mtg-rec

./: .gitignore  Cargo.toml  README.md
src/: db.rs  embedding.rs  main.rs  parse.rs
