[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
lancedb = "0.26.2"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
tch = {version = "0.13.0", features = ["download-libtorch"]}
fastembed = "5.11.0"
ort = "2.0.0-rc.11"
anyhow = "1.0.102"
tokio = "1.50.0"
serde_json = "1.0.149"
serde = "1.0.228"
